# iot-simulator-python

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/configs/: custom_sensors.csv  simulator_config.yaml
examples/scenarios/: csv_sensors_example.py  load_test_example.py  multi_sink_fanout_example.py  spark_datasource_example.py  yaml_config_example.py
examples/sinks/: aws_iot_sink_example.py  azure_iot_sink_example.py  callback_sink_example.py  console_sink_example.py  database_sink_example.py  delta_sink_example.py  file_sink_example.py  kafka_sink_example.py  webhook_sink_example.py  zerobus_databricks_notebook.py  zerobus_dbutils_notebook.py  zerobus_sink_example.py
iot_simulator/: __init__.py  __main__.py  _sensor_catalog.py  config.py  generator.py  models.py  pyspark_datasource.py  sensor_models.py  simulator.py
iot_simulator/sinks/: __init__.py  base.py  callback.py  cloud_iot.py  console.py  database.py  delta.py  factory.py  file.py  kafka.py  webhook.py  zerobus.py
tests/: test_cloud_iot_sink.py  test_config.py  test_database_sink.py  test_delta_sink.py  test_factory.py  test_generator.py  test_kafka_sink.py  test_main.py  test_models.py  test_pyspark_datasource.py  test_sensor_models.py  test_simulator.py  test_sink_runners.py  test_sinks.py  test_sinks_init.py  test_webhook_sink.py  test_zerobus_sink.py
